--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/cartao.css">
+    <link rel="stylesheet" href="src/css/listagem.css">
     <link rel="stylesheet" href="src/css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +26,7 @@
         <div class="pokedex">
             <div class="cartoes-pokemon">
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon aberto tipo-eletrico">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -246,7 +247,7 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon"> 
+                    <li class="pokemon ativo"> 
                         <img src="src/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu">
                         <span>Pikachu</span>
                     </li>
