fazendo melhorias no projeto e adicionando o readme

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <span class="tipo">elétrico</span>
 
                         <div class="cartao-imagem">
-                            <img src="src/imagens/pikachu.png" alt="Imagem do Pikachu">
+                            <img src="assets/imagens/pikachu.png" alt="Imagem do Pikachu">
                         </div>
                     </div>
 
@@ -73,7 +73,7 @@
                         <span class="tipo">grama</span>
 
                         <div class="cartao-imagem">
-                            <img src="src/imagens/bulbasaur.png" alt="Imagem do Bulbasaur">
+                            <img src="assets/imagens/bulbasaur.png" alt="Imagem do Bulbasaur">
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
                         <span class="tipo">fogo</span>
 
                         <div class="cartao-imagem">
-                            <img src="src/imagens/charmander.png" alt="Imagem do Charmander">
+                            <img src="assets/imagens/charmander.png" alt="Imagem do Charmander">
                         </div>
                     </div>
 
@@ -145,7 +145,7 @@
                         <span class="tipo">dragão</span>
 
                         <div class="cartao-imagem">
-                            <img src="src/imagens/dragonite.png" alt="Imagem do Dragonite">
+                            <img src="assets/imagens/dragonite.png" alt="Imagem do Dragonite">
                         </div>
                     </div>
 
@@ -181,7 +181,7 @@
                         <span class="tipo">água</span>
 
                         <div class="cartao-imagem">
-                            <img src="src/imagens/gyarados.png" alt="Imagem do Gyarados">
+                            <img src="assets/imagens/gyarados.png" alt="Imagem do Gyarados">
                         </div>
                     </div>
 
@@ -217,7 +217,7 @@
                         <span class="tipo">trevas</span>
 
                         <div class="cartao-imagem">
-                            <img src="src/imagens/gengar.png" alt="Imagem do Gengar">
+                            <img src="assets/imagens/gengar.png" alt="Imagem do Gengar">
                         </div>
                     </div>
 
@@ -248,27 +248,27 @@
             <nav class="listagem">
                 <ul>
                     <li class="pokemon ativo" id="pikachu"> 
-                        <img src="src/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu">
+                        <img src="assets/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu">
                         <span>Pikachu</span>
                     </li>
                     <li class="pokemon" id="bulbasaur">
-                        <img src="src/imagens/cabeca-bulbasaur.png" alt="Cabeça do Bulbasaur">
+                        <img src="assets/imagens/cabeca-bulbasaur.png" alt="Cabeça do Bulbasaur">
                         <span>Bulbasaur</span>
                     </li>
                     <li class="pokemon" id="charmander">
-                        <img src="src/imagens/cabeca-charmander.png" alt="Cabeça do Charmander">
+                        <img src="assets/imagens/cabeca-charmander.png" alt="Cabeça do Charmander">
                         <span>Charmander</span>
                     </li>
                     <li class="pokemon" id="dragonite">
-                        <img src="src/imagens/cabeca-dragonite.png" alt="Cabeça do Dragonite">
+                        <img src="assets/imagens/cabeca-dragonite.png" alt="Cabeça do Dragonite">
                         <span>Dragonite</span>
                     </li>
                     <li class="pokemon" id="gyarados">
-                        <img src="src/imagens/cabeca-gyarados.png" alt="Cabeça do Gyarados">
+                        <img src="assets/imagens/cabeca-gyarados.png" alt="Cabeça do Gyarados">
                         <span>Gyarados</span>
                     </li>
                     <li class="pokemon" id="gengar">
-                        <img src="src/imagens/cabeca-gengar.png" alt="Cabeça do Gengar">
+                        <img src="assets/imagens/cabeca-gengar.png" alt="Cabeça do Gengar">
                         <span>Gengar</span>
                     </li>
                 </ul>
